pixmapdir=$(datadir)/pixmaps/linphone
dist_pixmap_DATA= \
	linphone-banner.png \
	linphone.icns

iconsdir=$(datadir)/icons/hicolor
if BUILD_WIN32
	dist_icons_DATA=index.theme
endif

appiconsdir=$(iconsdir)/48x48/apps
dist_appicons_DATA= linphone.png

status48iconsdir=$(iconsdir)/48x48/status
dist_status48icons_DATA= \
	linphone-micro-muted.png \
	linphone-speaker-muted.png \
	linphone-micro-enabled.png \
	linphone-speaker-enabled.png \
	linphone-status-online.png \
	linphone-status-away.png \
	linphone-status-donotdisturb.png \
	linphone-status-offline.png \
	linphone-chat-nothing.png \
	linphone-chat-new-message.png \
	linphone-chat-writing.png \
	linphone-chat-new-message-and-writing.png \
	linphone-call-status-incoming.png \
	linphone-call-status-outgoing.png \
	linphone-call-status-missed.png \
	linphone-ok.png \
	linphone-inprogress.png \
	linphone-failed.png \
	linphone-camera-enabled.png \
	linphone-camera-disabled.png \
	linphone-security-ok.png \
	linphone-security-pending.png \
	linphone-media-play.png \
	linphone-media-pause.png \
	linphone-warning.png \
	linphone-take-screenshot.png

statussvgiconsdir=$(iconsdir)/scalable/status
dist_statussvgicons_DATA= \
	svg/linphone-micro-muted.svg \
	svg/linphone-speaker-muted.svg \
	svg/linphone-micro-enabled.svg \
	svg/linphone-speaker-enabled.svg \
	svg/linphone-status-online.svg \
	svg/linphone-status-away.svg \
	svg/linphone-status-donotdisturb.svg \
	svg/linphone-status-offline.svg \
	svg/linphone-call-status-incoming.svg \
	svg/linphone-call-status-missed.svg \
	svg/linphone-call-status-outgoing.svg \
	svg/linphone-chat-new-message-and-writing.svg \
	svg/linphone-chat-new-message.svg \
	svg/linphone-chat-nothing.svg \
	svg/linphone-chat-writing.svg \
	svg/linphone-ok.svg \
	svg/linphone-inprogress.svg \
	svg/linphone-failed.svg \
	svg/linphone-camera-enabled.svg \
	svg/linphone-camera-disabled.svg \
	svg/linphone-security-ok.svg \
	svg/linphone-security-pending.svg \
	svg/linphone-media-play.svg \
	svg/linphone-media-pause.svg \
	svg/linphone-warning.svg

actions48iconsdir=$(iconsdir)/48x48/actions
dist_actions48icons_DATA= \
	linphone-start-call2.png \
	linphone-add-call.png \
	linphone-start-call.png \
	linphone-start-chat.png \
	linphone-stop-call.png \
	linphone-hold-on.png \
	linphone-hold-off.png \
	linphone-history.png \
	linphone-edit.png \
	linphone-delete.png \
	linphone-contact-add.png \
	linphone-conference-start.png \
	linphone-call-transfer.png \
	linphone-record.png \
	linphone-chat-send.png

actionssvgiconsdir=$(iconsdir)/scalable/actions
dist_actionssvgicons_DATA= \
	svg/linphone-start-call.svg \
	svg/linphone-add-call.svg \
	svg/linphone-hold-off.svg \
	svg/linphone-hold-on.svg \
	svg/linphone-start-call2.svg \
	svg/linphone-start-chat.svg \
	svg/linphone-history.svg \
	svg/linphone-edit.svg \
	svg/linphone-delete.svg \
	svg/linphone-contact-add.svg \
	svg/linphone-conference-start.svg \
	svg/linphone-call-transfer.svg \
	svg/linphone-record.svg \
	svg/linphone-chat-send.svg
